--- a/index.html
+++ b/index.html
@@ -6,54 +6,54 @@
 	<body>
 		<center>
 			<h1>My Family</h1>
-			<img src="C:\Mac\Home\Documents\code\HTML\July\02-07-2025\paternal grandfather.png" alt="Paternal Grandfather" width="400">
+			<img src="paternal grandfather.png" alt="Paternal Grandfather" width="400">
 		</center>
 
 			<h2>Mr. R Narasimha Murthy (My Paternal Grandfather)</h2>
 			<p>i love my grandfather</p>
 
 		<center>
-			<img src="C:\Mac\Home\Documents\code\HTML\July\02-07-2025\paternal grandmother.png" alt="Paternal Grandmother" width="400">
+			<img src="paternal grandmother.png" alt="Paternal Grandmother" width="400">
 		</center>
 	
 			<h2>Mrs. R Ramavathi (My Paternal Grandmother)</h2>
 			<p>i love my grandmother</p>
 
 		<center>
-		   	<img src="C:\Mac\Home\Documents\code\HTML\July\02-07-2025\Maternal grandfather.png" alt="Maternal Grandfather" width="400">
+		   	<img src="Maternal grandfather.png" alt="Maternal Grandfather" width="400">
 		</center>
 	
 		<h2>Mr. CH Rambabu (My Maternal Grandfather)</h2>
 		<p>i love my grandfather</p>
 
 		<center>
-		  	<img src="C:\Mac\Home\Documents\code\HTML\July\02-07-2025\Maternal grandmother.png" alt="Maternal Grandmother" width="400">
+		  	<img src="Maternal grandmother.png" alt="Maternal Grandmother" width="400">
 		</center>
 	
 			<h2>Mrs. CH Dhanalakshmi (My Maternal Grandmother)</h2>
 			<p>i love my grandmother</p>
 
 		<center>
-		   	<img src="C:\Mac\Home\Documents\code\HTML\July\02-07-2025\father.png" alt="Father" width="400">
+		   	<img src="father.png" alt="Father" width="400">
 		</center>
 	
 			<h2>Mr. R Bhagavan Das (My father)</h2>
 			<p>i love my father</p>
 
 		<center>
-		   <img src="C:\Mac\Home\Documents\code\HTML\July\02-07-2025\mother.png" alt="Mother" width="400">
+		   <img src="mother.png" alt="Mother" width="400">
 		</center>
 	
 		<h2>Mrs. R Veeramani (My mother)</h2>
 		<p>i love my mother</p>
 		<center>
-		   <img src="C:\Mac\Home\Documents\code\HTML\July\02-07-2025\sister.png" alt="sister" width="400">
+		   <img src="sister.png" alt="sister" width="400">
 		</center>
 	
 		<h2>Mrs. R Navya (My sister)</h2>
 		<p>i love my sister</p>
 		<center>
-		   <img src="C:\Mac\Home\Documents\code\HTML\July\02-07-2025\me.png" alt="Me" width="400">
+		   <img src="me.png" alt="Me" width="400">
 		</center>
 	
 		<h2>Mr. R Lokesh (Me)</h2>
