--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 			<p>i love my grandmother</p>
 
 		<center>
-		   	<img src="Maternal grandfather.png" alt="Maternal Grandfather" width="400">
+		   	<img src="maternal grandfather.png" alt="Maternal Grandfather" width="400">
 		</center>
 	
 		<h2>Mr. CH Rambabu (My Maternal Grandfather)</h2>
 		<p>i love my grandfather</p>
 
 		<center>
-		  	<img src="Maternal grandmother.png" alt="Maternal Grandmother" width="400">
+		  	<img src="maternal grandmother.png" alt="Maternal Grandmother" width="400">
 		</center>
 	
 			<h2>Mrs. CH Dhanalakshmi (My Maternal Grandmother)</h2>
